--- a/2024090905023-程宗健-JAVA06.md
+++ b/2024090905023-程宗健-JAVA06.md
@@ -105,7 +105,7 @@ public class WechatCustomer extends Customer {
 }
 ```
 
-Custom父类
+**Custom父类**
 ```java
 public class Customer {  
 }  
@@ -114,7 +114,7 @@ public class Customer {
 
 
 
-**Systom类**
+**System类**
 ```java
 import java.util.ArrayList;  
 import java.util.Iterator;  
