2024090905023-程宗健-JAVA06.md

--- a/2024090905023-程宗健-JAVA06.md
+++ b/2024090905023-程宗健-JAVA06.md
@@ -71,7 +71,7 @@ public interface Order {
 }
 ```
 
-**TableCustom**
+**TableCustomer**
 ```java
 import java.util.Random;  
   
@@ -85,7 +85,7 @@ public class TableCustome extends Customer {
 }
 ```
 
-**WechatCustom**
+**WechatCustomer**
 ```java
 import java.util.Random;  
   
@@ -105,7 +105,7 @@ public class WechatCustomer extends Customer {
 }
 ```
 
-**Custom父类**
+**Customer父类**
 ```java
 public class Customer {  
 }  
